--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  pool: 5
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password:
   socket: /tmp/mysql.sock
@@ -20,6 +20,8 @@ default: &default
 development:
   <<: *default
   database: chat-space_development
+  password: password
+  host: db
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
