--- a/config/database.yml
+++ b/config/database.yml
@@ -29,6 +29,8 @@ development:
 test:
   <<: *default
   database: chat-space_test
+  password: password
+  host: db
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
