--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,4 @@ services:
     depends_on:
       - db
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    entrypoint: /app/docker-entrypoint.sh
